--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,10 @@
     <main class="main">
       <!-- HERO -->
       <section class="hero">
+        <div class="hero-container"></div>
+      </section>
+
+      <!-- <section class="hero">
         <div class="hero-container">
           <div>
             <img src="./images/LogoCalm.svg" alt="logo" class="hero-logo" />
@@ -95,8 +99,8 @@
             design & travel.
           </h1>
         </div>
-      </section>
-
+      </section> -->
+  
       <!-- ABOUT -->
       <section class="about" id="about">
         <!-- SimpleLightBox -->
